1233: Fixups to filter-list styling
Followign the recent bump to mozilla-protocol, some form styling changed and made things grey by default.

Also fix up some padding issues/regressions

Remove line between sections in mobile view - took up too much screen space

--- a/src/css/organisms/filter-form.scss
+++ b/src/css/organisms/filter-form.scss
@@ -1,4 +1,14 @@
 .filter-form {
+  padding: 16px 0;
+
+  @media #{$mq-md} {
+    padding: 24px 0;
+  }
+
+  fieldset,
+  label {
+    color: $color-black;
+  }
   margin-top: 16px;
 
   @media #{$mq-md} {
@@ -27,19 +37,23 @@
 }
 
 .filter-form-section {
-  border-bottom: 1px solid $color-marketing-gray-30;
-  padding: 16px 0;
-
   @media #{$mq-md} {
-    padding: 24px 0;
-  }
+    border-bottom: 1px solid $color-marketing-gray-30;
+    padding-bottom: 16px;
 
-  &:last-child {
-    border-bottom: 0;
+    &:last-child {
+      border-bottom: 0;
+    }
   }
 
   label:last-child {
     margin-bottom: 0;
+  }
+
+  &.filter-form-footer {
+    @media #{$mq-md} {
+      padding-bottom: 0px;
+    }
   }
 }
 
